--- a/Thanks
+++ b/Thanks
@@ -120,8 +120,9 @@ Bruce Jackson of NASA <e.b.jackson@larc.nasa.gov>
   flight model.  Bruce has patiently answered my many, many questions.
 
 
-Oliver L. K. <delise@rp-plus.de>
+Oliver Delise <delise@rp-plus.de>
   FAQ Maintainer.
+  Working on adding some networking / multi-user support.
 
 
 Tom Knienieder <knienieder@ms.netwing.at>
