Updates from Michael Basler.

--- a/Docs/InstallGuide/SOURCE/free.tex
+++ b/Docs/InstallGuide/SOURCE/free.tex
@@ -296,6 +296,14 @@ USA, which is available for download from
 Scenery was further improved by Curt via adding features like lakes, rivers, coastlines
 and the like in spring 1999.
 
+\item In June 1999 there was a split of the source tree into a stable and a developmental
+branch. Even version numbers as 0.6, 0.8, and (hopefully) 1.0 refer to stable versions
+being intended for general use while odd versions as 0.7 and so on refer to developmental
+versions. Policy is to do only bug fixes in the even versions, while new features are
+generally added to odd-numbered versions, which finally after things stabilized will turn
+into the next stable version by adding 0.1. At present (and probably in the future), this
+guide refers to the stable branch. \label{branches}
+
 \end{itemize}
 
 \longpage
