--- a/Docs/InstallGuide/SOURCE/getstart.tex
+++ b/Docs/InstallGuide/SOURCE/getstart.tex
@@ -79,3 +79,5 @@
 %% updated for fgfs 0.6
 %% added sections on menu and panel
 %% smaller and updated pix for faster download
+%% revision 0.21 1999/06/30 michael
+%% Linux update by Bernhard
