--- a/Docs/InstallGuide/SOURCE/building.tex
+++ b/Docs/InstallGuide/SOURCE/building.tex
@@ -58,6 +58,11 @@ On the other hand, compiling \FlightGear is not a task for novice users. Thus, i
 a beginner (we all were once) we recommend postponing this and just starting with the
 binary distribution to get you flying.
 
+Besides, there have been two branches of code starting from version 0.6. For more
+details, see Section \ref{branches}. This description generally refers to the stable,
+even-numbered branch. It is almost certain, that odd-numbered versions require
+modifications to that.
+
 As you will note, this Chapter is far from being complete. Basically, we describe
 compiling for two operating systems only, \Index{Windows 98/NT} and \Index{Linux}. There
 is a simple explanation for this: These are just the systems we are working on. We hope
@@ -71,8 +76,35 @@ If you are running Linux you probably have to build your own
 
 \begin{enumerate}
 
+%%Bernhard 25.06.1999
+
+\item \FlightGear needs some supplementary libraries which are usually
+  not contained in any distribution we know of. These are:
+
+  \begin{itemize}
+
+  \item{{\em plib}} which is absolutely essential for the building
+    process. Get the latest version of {\em plib} at
+    \web{http://www.woodsoup.org/projs/plib/} and follow the
+    instructions contained in README.plib.
+
+  \item{{\em gfc}} is only needed if you want to build the scenery
+    generation tools but it doesn't hurt to have it installed. It can
+    be found along with the building instructions at
+    \web{http://www.geog.psu.edu/~qian/gfc/index.html}.
+
+  \item{{\em gpc}} which is also needed for the scenery generation
+    tools. Get it from
+    \web{http://www.cs.man.ac.uk/aig/staff/alan/software/}, building
+    instructions can be found in README.gpc in your \FlightGear source
+    directory.
+
+  \end{itemize}
+
+  Now you are ready to proceed to the task of getting, compiling and installing \FlightGear itself:
+
 \item Get the file \texttt{FlightGear-x.xx.tar.gz} from the
-\texttt{source} subdirectory under
+  \texttt{source} subdirectory under
 
  \web{ftp://ftp.flightgear.org/pub/fgfs/Source/}
 
@@ -110,18 +142,42 @@ type
  \noindent
 This will install the \Index{binaries} in \texttt{/usr/local/bin}.
 
-There is a problem concerning permissions under Linux/Glide. All
-programs accessing the accelerator board need root permissions.
-The solution is either to play as root or make the
-\texttt{/usr/local/bin/fgfs} binary \texttt{setuid root}, i.e.
-when this binary is run root privileges are given. Do this by
-issuing (as root)
+There is a problem concerning permissions under Linux/Glide. All programs accessing the
+accelerator board need root permissions. The solution is either to play as root (this is
+{\em bad} practice and not always possible) or make the \texttt{/usr/local/bin/fgfs}
+binary \texttt{setuid root}, i.e. when this binary is run root privileges are given. Do
+this by issuing (as root)
 
    \texttt{chmod +s /usr/local/bin/fgfs}.
 
  \noindent
-A solution for this problem is upcoming, keep an eye on the 3Dfx
-website if you run a 3Dfx board.
+
+ Again, this is a quick and dirty hack.  The perfect solution for this
+ problem is using a kernel module called {\em 3dfx.o}. It is available
+ along with documentation at \web{http://www.xs4all.nl/~carlo17/3dfx/index.html}
+ and it might be a good idea to read some of the Quake-related links there!
+
+ To install this kernel module, just download it, become root and
+ issue the following commands:
+
+\texttt{mkdir dev3dfx}
+
+\texttt{cd dev3dfx}
+
+\texttt{tar xvfz ../Dev3Dfx-2.7.tar.gz}
+
+\texttt{make}
+
+\texttt{cp 3dfx.o /lib/modules/`uname -r`/misc}
+
+\texttt{mknod /dev/3dfx c 107 0}
+
+\texttt{insmod 3dfx}
+
+It is a good idea to put the last line into one of your bootup scripts! After having
+installed this module, you can even go ahead and remove the S-bit from {\em all} programs
+that need access to your 3D hardware.
+
 
 \end{enumerate}
 
@@ -327,22 +383,22 @@ instructions) you can now create and populate the \texttt{install tree}.  Run:
     debugging symbols off of the executable.  To do this, change to the
     directory in the \texttt{install tree} where your binary lives and run:
 
-        \texttt{strip fgfs.exe} resp. \texttt{strip fgfs-sgi.exe}.
+    \texttt{strip fgfs.exe} resp. \texttt{strip fgfs-sgi.exe}.
+  \end{enumerate}
 
-\end{enumerate}
-
-
-%% Revision 0.00  1998/09/08  michael
+%% Revision 0.00 1998/09/08 michael
 %% Initial revision for version 0.53.
 %% employing redame.win32/readame.linux
 %% by c. olson , b. buckel
-%% Revision 0.01  1998/09/20  michael
+%% Revision 0.01 1998/09/20 michael
 %% several extensions and corrections
-%% revision 0.10  1998/10/01  michael
+%% revision 0.10 1998/10/01 michael
 %% final proofreading for release
-%% revision 0.11  1998/11/01  michael
+%% revision 0.11 1998/11/01 michael
 %% deleted some obsolete stuff from the Linux Section
-%% revision 0.12  1999/03/07  michael
+%% revision 0.12 1999/03/07 michael
 %% changed Windows to Cygnus b20
-%% revision 0.20  1999/06/04  michael
+%% revision 0.20 1999/06/04 michael
 %% complete rewrite of the windows build Section exploiting Curt's README.win32
+%% revision 0.21 1999/06/30 bernhard
+%% complete rewrite of Linux build Section
