Removed references to libgfc which is now depricated, replaced by shapelib.

--- a/Thanks
+++ b/Thanks
@@ -145,6 +145,8 @@ Christian Mayer <Vader@t-online.de>
 
 David Megginson <david@megginson.com>
   Contributed a patch to allow mouse input to control the yoke.
+  Contributed financially towards hard drive space for use by the flight
+  gear project.
 
 
 Eric Mitchell <mitchell@mars.ark.com>
