--- a/Thanks
+++ b/Thanks
@@ -165,6 +165,7 @@ Alan Murta <amurta@cs.man.ac.uk>
 Alexei Novikov <anovikov@heron.itep.ru>
   Contributed a script to turn fgfs scenery into beautifully rendered
   2d maps.
+  Contributed a first draft of a scenery creation howto.
 
 
 Curt Olson <curt@flightgear.org>
