--- a/Thanks
+++ b/Thanks
@@ -77,6 +77,12 @@ Oliver Delise <delise@rp-plus.de>
   Working on adding some networking / multi-user support.
 
 
+Dave Eberly <eberly@magic-software.com>  http://www.magic-software.com
+  Contributed some sphere interpolation code used by Christian Mayer's
+  weather data base system.  Go to Dave's web site.  He has a ton of
+  really useful looking code available there.
+
+
 Jean-Francois Doue
   Vector 2D, 3D, 4D and Matrix 3D and 4D inlined C++ classes.  (Based on
   Graphics Gems IV ed. Paul S. Heckbert)
