2000 17 Jan updates from "Oliver Delise" <delise@mail.isis.de>

--- a/src/NetworkOLK/README
+++ b/src/NetworkOLK/README
@@ -31,4 +31,4 @@ b) Runtime - setting the "int net_hud_display" variable to 0 disables any
    network display (default)
 
 Have Phun
-Oliver  <delise@rp-plus.de>
+Oliver  <delise@mail.isis.de>
