--- a/README
+++ b/README
@@ -1,33 +1,35 @@
-Welcome to the Flight Gear project.
-===================================
+Welcome to the FlightGear Flight Simulator project.
+===================================================
 
-The primary web page for this project is:
+The primary web page for this project is: http://www.flightgear.org
 
-    http://www.menet.umn.edu/~curt/fgfs
+For basic installation instructions see the "INSTALL" file.
 
-===================================
+Before you can run FlightGear you will also need to download and
+install the "base" package which is a collection of textures, sounds,
+sample scenery, and other data files need by the sim.
 
-Please see .... for more information on .... 
+For additional install help for specific platforms please browse the
+"docs-mini/" subdirectory.
 
-- Authors & Thanks:  List of the authors and contributors.
+More complete documentation is available from our web page as a
+separate distribution.
 
-- COPYING:  Copyright and usage terms and limits.
+Please take a look at the "Thanks" file for a list of people who have
+contributed to this project.  If you have contributed something but
+don't find your name in this file.  Please send a polite reminder to
+curt@flightgear.org
 
-- INSTALL:  Generic install instructions
+For a summary of changes/additions by version see the "NEWS" file.
 
-- NEWS:  The latest news
+This project is GPL'd.  For complete details on our licensing please
+see the "COPYING" file.
 
-- README:  This file
+For information on available mailing lists, mailing list archives, and
+other available source code and documenation, please visit our web
+site.
 
-- README.Unix:  Hints and tips for compiling on Unix
-
-- README.Win32:  Specific Win32 compiling information and instructions
-
-- README.anoncvs:  Info on accessing the most current copies of the source.
-
-- README.autoconf:  Info on updating the make system (adding new source
-                    files, etc.)
-
-- README.running:  Basic keyboard commands for running the simulator
-
-
+FlightGear is a product of the collaboration of large international
+group of volunteers.  FlightGear is a work in progress.  FlightGear
+comes with no warrantee.  We hope you enjoy FlightGear and/or find it
+of some value!
